mapred limited to 2GB